# hawk

./: Cargo.toml  notes.txt
crates/hawk/: Cargo.toml
crates/hawk-core/: Cargo.toml  data.csv  data.ion
crates/hawk-core/src/: lib.rs
crates/hawk-core/src/source/: csv.rs  mod.rs
crates/hawk-parser/: Cargo.toml
crates/hawk-parser/src/: lib.rs
crates/hawk/src/: main.rs
