[package]
name = "hawk-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
nom = "7.1.3"
rust_decimal = "1.29.1"

[lib]
path = "src/lib.rs"
