[package]
name = "hawk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
hawk-core = { path = "../hawk-core" }
hawk-parser = { path = "../hawk-parser" }
rust_decimal = "1.29.1"
ion-rs = "0.18.1"
csv = "1.3.0"
clap = { version = "4.5.20", features = ["derive"] }
